noted the bits not examinable

--- a/10_central_limit_theorem/source/10_central_limit_theorem.tex
+++ b/10_central_limit_theorem/source/10_central_limit_theorem.tex
@@ -64,7 +64,7 @@ Putting it all together we get
 p_Z(z)=\left\{\begin{array}{ll} z&z\in [0,1]\\-z& z\in [1,2]\\0&\mbox{otherwise}\end{array}\right.
 \end{equation}
 
-\subsection*{Sums and the moment generating function}
+\subsection*{Sums and the moment generating function\footnote{not covered in lectures and not examinable}}
 Recall that
 \begin{equation}
 m_X(t)=\langle e^{tX}\rangle
@@ -75,7 +75,7 @@ distinguishing probability quantities for different random variables. Now if $X$
 m_{X+Y}(t)=\langle e^{t(X+Y)}\rangle=\langle e^{tX}e^{tY}\rangle=\langle e^{tX}\rangle \langle e^{tY}\rangle=m_X(t)m_Y(t)
 \end{equation}
 
-\subsection*{The sum of two Gau\ss{}ians}
+\subsection*{The sum of two Gau\ss{}ians\footnote{not covered in lectures and not examinable}}
 
 Next lets consider the sum of two Gau\ss{}ians, $X\sim
 \mathcal{N}(\mu_x,\sigma_x^2)$ and $Y\sim
