--- a/problem_sheets/ps3/source/ps3.tex
+++ b/problem_sheets/ps3/source/ps3.tex
@@ -62,7 +62,7 @@ goes from -1 to one, so $\mbox{erf}\,(-\infty)=-1$ and $\mbox{erf}\,(\infty)=1$.
 
 
 
-\item This will look like a long question but it is almsot all
+\item This will look like a long question but it is almost all
   background and the question is not too bad when you actually read
   through it. In particle physics when a collider is being used to
   find a new particle like the Higgs boson or the top squark
