--- a/9_Gauss_distribution/source/9_slides.tex
+++ b/9_Gauss_distribution/source/9_slides.tex
@@ -1,3 +1,4 @@
+
 \documentclass{beamer}
 \usepackage[latin1]{inputenc}
 %\usetheme{Montpellier}
@@ -82,7 +83,7 @@ $$
 What about the \color{reddish}$1/\sqrt{2\pi\sigma^2}$\color{black}{}? That is there to normalize the curve:
 \color{purple}
 $$
-\int_{-\infty}^\infty e^{-x^2/2}dx=\sqrt{2\pi\sigma^2}
+\int_{-\infty}^\infty e^{-x^2/2\sigma^2}dx=\sqrt{2\pi\sigma^2}
 $$
 \color{black}
 \begin{itemize}
