--- a/9_Gauss_distribution/source/9_Gauss_distribution.tex
+++ b/9_Gauss_distribution/source/9_Gauss_distribution.tex
@@ -60,14 +60,20 @@ It has a classic \lq{}bell\rq{} shape seen in Fig.~\ref{fig_gauss}; it
 looks a bit like a binomial distribution with $p=0.5$. The slightly
 confusing thing is the $1/\sqrt{2\pi\sigma^2}$, that is there to normalize the curve:
 \begin{equation}
-\int_{-\infty}^\infty e^{-x^2/2}dx=\sqrt{2\pi\sigma^2}
+\int_{-\infty}^\infty e^{-x^2/2\sigma^2}dx=\sqrt{2\pi\sigma^2}
 \end{equation}
 This is confusing because we can do this particular definite integral
 going from minus infinity to infinity, but the corresponding
 indefinite integral can't be done in the sense that we can't write
 down a formula in terms of functions we already know. There is a trick
-for doing the definite integral which we won't look at here for
-reasons of time but is very nice if you want to look it up.
+for doing the definite integral from minus infinity to infinity which
+we won't look at here for reasons of time but is very nice if you want
+to look it up. Of course, since the integral goes from minus infinity
+to infinity shifting the $x$ around doesn't change the value:
+\begin{equation}
+\int_{-\infty}^\infty e^{-(x-\mu)^2/2\sigma^2}dx=\sqrt{2\pi\sigma^2}
+\end{equation}
+where $\mu$ is a constant.
 
 Surprisingly it is easier to calculate the moment generating function
 than it is to calculate the mean and variance directly; we will do
