--- a/8_continuous_random/source/8_continuous_random.tex
+++ b/8_continuous_random/source/8_continuous_random.tex
@@ -129,7 +129,9 @@ and
 \langle g_1(X)+g_2(X)\rangle =\langle g_1(X)\rangle +\langle g_2(X)\rangle
 \end{equation}
 
-It is useful to note that these properties can be used to see how the mean and variance change under simple linear transformations. With the obvious notation let $Y=X=c$, then
+It is useful to note that these properties can be used to see how the
+mean and variance change under simple linear transformations. With the
+obvious notation let $Y=X+c$, then
 \begin{equation}
 \mu_Y=\langle Y\rangle =\langle X+c\rangle=\langle X \rangle +c=\mu_X+c
 \end{equation}
