--- a/sample_paper/source/2019_sample_COMS10011.tex
+++ b/sample_paper/source/2019_sample_COMS10011.tex
@@ -3,7 +3,7 @@
 \usepackage{amsmath,amsfonts,amssymb}   
 
 \newif\ifanswer
-\answerfalse
+\answertrue
 
 
 \let\imp=\Rightarrow
@@ -86,7 +86,10 @@ and $B$ and $\emptyset$ is the empty set.
 
   \ifanswer
     Solution: 
-  $$P=40/2598960=1/64974$$
+    $$P=40/2598960=1/64974$$
+    or if you exclude the royal flushes
+    $$P=36/2598960$$
+    either answer is acceptable.
   \fi
 
   %4
