--- a/sample_paper/source/2019_sample_COMS10011.tex
+++ b/sample_paper/source/2019_sample_COMS10011.tex
@@ -4,7 +4,7 @@
 
 \newif\ifanswer
 \answertrue
-
+%\answerfalse
 
 \let\imp=\Rightarrow
 \let\iff=\Leftrightarrow
@@ -26,7 +26,7 @@
 
 This is a sample paper, it has the same rubric and the same style of
 question as the real paper, the layout is slightly different to the
-official exam layout. This is a draft, in particular, we haven't added the long questions yet!
+official exam layout. 
 
 \subsection*{Rubric}{
 This paper contains \emph{two} parts. \\
@@ -49,7 +49,7 @@ Calculators must have the Faculty of Engineering Seal of Approval.}
 
   \ifanswer
   Solution: 
-  $\{TTTT,TTTH,TTHT,TTHH,THTT,THTH,THHT,THHH,HTTT,HTTH,HTHT,HTHH,HHTT,HHTH,HHHT,HHHH\}$.
+  $\{TTTT,TTTH,TTHT,TTHH,THTT,THTH,THHT,$\\$THHH,HTTT,HTTH,HTHT,HTHH,HHTT,HHTH,HHHT,$\\$HHHH\}$.
   \fi
 
 
@@ -282,7 +282,118 @@ Write down whether each variable is categorical or numerical.
   
 \section*{Section B: long questions - answer two questions}
 
+\begin{enumerate}
 
+\item This question is largely about the binomial distribution.
+  \begin{enumerate}
+  \item{} [5] A six-sided dice is rolled four times. What is the change of getting exactly two threes?
+      \item{} [5] A six-sided dice is rolled four times. What is the change of getting at least two threes?
+    \item{} [5] An $n$-sided dice is rolled $s$ times with $n>3$. What is the change of getting exactly $r$ threes?
+    \item{} [5] If the chance of getting exactly $r$ threes is $p(r)$ show
+      $$\sum_{r=0}^sp(r)=1$$
+    \item{} [5] You have a three-sided dice and a six-sided dice. In a game
+      you flip a coin, if the coin comes up heads, you roll the
+      three-sided dice, if it comes up tails, you roll the six-sided
+      dice. What is the chance of getting a three.
+      \end{enumerate}
 
+\ifanswer
+If a six sided dice if rolled four times then the probability of exactly two threes is
+\begin{equation}
+  p(2)=\left(\begin{array}{c}4\\2\end{array}\right)\left(\frac{1}{6}\right)^2\left(\frac{5}{6}\right)^2
+\end{equation}
+The chance of at least two threes is the same as the chance of anything except zero threes or one three:
+\begin{equation}
+  p(\ge 2)=1-\left(\frac{5}{6}\right)^4-4\left(\frac{1}{6}\right)\left(\frac{5}{6}\right)
+\end{equation}
+The more general case is
+\begin{equation}
+  p(r)=\left(\begin{array}{c}s\\r\end{array}\right)\left(\frac{1}{6}\right)^r\left(\frac{5}{6}\right)^{s-r}
+\end{equation}
+The sum of $p(r)$ is one follows from the binomial theorem
+\begin{equation}
+  (p+q)^s=\sum_{r=0}^s\left(\begin{array}{c}s\\r\end{array}\right)p^rq^{s-r}
+\end{equation}
+but with $q=1-p$. Finally the probability of getting a three in the coin flipping game is
+\begin{equation}
+  p=\frac{1}{2}\frac{1}{6}+\frac{1}{2}\frac{1}{3}
+\end{equation}
+\fi
 
+\item This question has two parts, one is about Bayes's theorem, the other about Pearson's chi-square test.
+
+  \begin{enumerate}
+  \item{} [10] You want to go for a walk. However, when you wake up the day is cloudy and half of all raining days start of cloudy. On the other hand, two days in five start off cloudy and it's been rather dry recently with only rain only on one day in ten. What is the chance it will rain?
+\item{} [15]  A genetics engineer was attempting to cross a tiger and a cheetah. She predicted a phenotypic outcome of the traits she was observing to be in the following ratio: 4 stripes only; 3 spots only; 9 both stripes and spots. When the cross was performed, and she counted the individuals she found 50 with stripes only, 41 with spots only and 85 with both. According to the Chi-square test, did she get the predicted outcome? Use the table below with a significance level of 0.05 to check. 
+
+	\begin{center}
+		\includegraphics[width=5.5in]{chi-square.png}
+	\end{center}
+\end{enumerate}
+  
+    \ifanswer
+    For the Bayes question
+    \begin{equation}
+      p(\mbox{rain}|\mbox{cloudy})=\frac{p(\mbox{cloudy}|\mbox{rain})p(\mbox{rain})}{p(\mbox{cloudy})}=\frac{0.5*0.1}{0.4}=0.125
+    \end{equation}
+    For the chi-square question
+    \begin{center}
+      \begin{tabular}{|l|c|c|c|c|c|}
+        \hline
+        \mbox{expected ratio}&\mbox{observed \#}&\mbox{expected \#}&$O-E$&$(O-E)^2$&$(O-E)^2/E$\\
+        \hline
+        \mbox{4 stripe}&50&44&6&36&0.82\\
+        \mbox{3 spots}&41&33&8&64&1.94\\
+        \mbox{9 stripes/spots}&85&99&-14&196&1.98\\
+        \hline
+        \mbox{total}&176&176&0&&4.74\\
+        \hline
+      \end{tabular}
+    \end{center}
+    where $4/16*176=44$, $3/16*176=33$, $9/16*176=99$ and the degrees
+    of freedom are $3-1=2$ since there are three characteristics:
+    spots, stripes and both. $4.74$ is less than $5.991$ so we can accept the null hypothesis.
+
+    \fi
+
+\item You have designed a horror game in which a sound of heartbeat is
+  played during the game. Your assumption is that the sound of the
+  heartbeat make the game frightening. You wish to design an
+  experiment to investigate if adding the sound of the heartbeat does
+  increase the actual heartbeat of the player. You set out to make 20
+  participants play two versions of your game: one with the sound of
+  heartbeat is played, one with no sound. Using a heartbeat sensor,
+  you measure the heart rate of the participants before playing and
+  after and note the difference.
+\begin{enumerate}
+\item{} [6] What are your independent and dependent variables
+
+\ifanswer  
+Answer: dependant = different in heartbeat / independent = sound of heartbeat or not
+\fi
+
+\item{} [8] Are you doing a within or between experiment and why?
+
+\ifanswer
+Answer: it is possible to do a within-subjects experiment as long as the portion of the game tested are changed between the sound vs. no sound. You would have to make sure the portion of the game used are comparable (same level of fear). Doing it within would be better because the data are paired and thus you would need less participants. You can also do a between-subjects study in which one group of participants would test the same portion of the game with sound and another group of participants would test it without. In such case you will be surer that the games are comparable (in term of level of fear) but you will need more participants.
+\fi
+
+\item{} [6] Do you need to use counterbalancing or not and why?
+
+\ifanswer
+Answer: in the within case, you would need to make one half of the participants start with the \lq{}no sound\rq{} condition and then the \lq{}sound\rq{} one. The other half of participants would do the opposite.
+\fi
+
+\item{} [5] Imagine what is the task that the participants are going to do. [4 marks]
+
+\ifanswer Answer: the participants are asked to sit down in front of
+the TV screen and to take the Xbox controller. The experimenter first
+measures the participants rest heartbeat. The game starts, and the
+participants are asked to find a specific item in the game. Once
+finished the experimenter measures the participants current heartbeat.
+\fi
+\end{enumerate}
+
+ \end{enumerate}
+  
 \end{document}
