--- a/02_conditional_probability/source/2_conditional_probability.tex
+++ b/02_conditional_probability/source/2_conditional_probability.tex
@@ -193,6 +193,14 @@ Looking at the bottom row of the table you can see how it all works;
 denominator just serves to normalize the row so that it is a
 probability.
 
-
+\section*{Summary}
+\begin{itemize}
+\item The \textbf{conditional probability} of event $R$ given $C$:
+  \begin{equation}
+P(R|C)=\frac{P(R\cap C)}{P(C)} 
+  \end{equation}
+  This is the probability of getting an outcome in event $R$ if we
+  know the outcome is in event $C$.
+\end{itemize}
 \end{document}
 
