--- a/03_bayes/source/3_bayes.tex
+++ b/03_bayes/source/3_bayes.tex
@@ -97,7 +97,8 @@ P(A|B)P(B)=P(A\cup B)
 which tells us that the probability of $A$ and $B$ is the probability
 of $B$ multiplied by the probability of $A$ given $B$. This makes lots
 of sense, but it is also notable that the left hand side doesn't look
-symmetric in $A$ and $B$ while the right hand side clearly is. Obviously this means we can write
+symmetric in $A$ and $B$ while the right hand side clearly
+is. Obviously this means we can write
 \begin{equation}
 P(A|B)P(B)=P(B|A)P(A)
 \end{equation}
@@ -106,7 +107,8 @@ or
 P(A|B)=\frac{P(B|A)P(A)}{P(B)}
 \end{equation}
 This formula is called the Bayes' rule and is surprisingly useful
-because there are lots of interesting problems where we are told $P(B|A)$ but would like to know $P(A|B)$.
+because there are lots of interesting problems where we are told
+$P(B|A)$ but would like to know $P(A|B)$.
 
 Often the example given is related to testing. Lets say 5\% of steaks
 sold as beef steak are actually made of horse and imagine we have a
@@ -296,6 +298,32 @@ few years ago the best models of language, use a Hidden Markov Model,
 which nonetheless is designed around assumptions about conditional
 independence.
 
+\section*{Summary}
+\begin{itemize}
+\item Two events $A$ and $B$ are said to be \textbf{independent} if 
+\begin{equation}
+P(A\cap B)=P(A)P(B)
+\end{equation}
+\item  Two events $A$ and $B$
+are \textbf{conditionally independent} conditional on a third event
+$C$ is
+\begin{equation}
+P(A\cap B|C)=P(A|C)P(B|C)
+\end{equation}
+\item \textbf{Bayes' rule} is
+  \begin{equation}
+    P(A|B)=\frac{P(B|A)P(A)}{P(B)}
+\end{equation}
+\item In a \textbf{na\"ive Bayes estimator} we estimate $P(X|A,B,\ldots,C)$ by first using Bayes' rule
+  \begin{equation}
+    P(X|A,B,\ldots,C)=\frac{P(A,B,\ldots,C|X)P(X)}{P(A,B,\ldots,C)}
+  \end{equation}
+  and then approximate using an assumption of independence:
+  \begin{eqnarray}
+    P(A,B,\ldots,C|X)&\approx&P(A|X)P(B|X)\ldots P(C|X)\cr
+    P(A,B,\ldots,C)&\approx&P(A)P(B)\ldots P(C)
+  \end{eqnarray}
+\end{itemize}
 \end{document}
 
 
