--- a/04_random_variables/source/4_random_variables.tex
+++ b/04_random_variables/source/4_random_variables.tex
@@ -27,7 +27,7 @@ dealing with data we want to quantify. Because we can add, subtract
 and multiply numerical data, applying probability to numerical data allows for some
 techniques and approaches that aren't possible for other data
 types. The mathematical construction used in this case is a
-\textsl{random variable}.
+\textbf{random variable}.
 
 The expression \lq{}random variable\rq{} is often used very loosely
 and in a way that can be confusing; however, it does have an exact
@@ -67,7 +67,7 @@ a table
 $p$&1/8&3/8&3/8&1/8
 \end{tabular}
 \end{center}
-A table like this is called a \textsl{probability distribution}.
+A table like this is called a \textbf{probability distribution}.
 
 The probabilities satisfy similar properties to the probabilities for
 events:
@@ -107,7 +107,7 @@ and for $Y$
 $p_Y$&1/9&1/3&5/9
 \end{tabular}
 \end{center}
-We won't discuss it much now but you could also work out a \textsl{joint distribution}, this is the
+We won't discuss it much now but you could also work out a \textbf{joint distribution}, this is the
 distribution for pairs $(X,Y)$:
 \begin{center}
 \begin{tabular}{c|ccccc}
@@ -120,12 +120,12 @@ distribution for pairs $(X,Y)$:
 \end{center}
 so $p_{X,Y}(3,2)=2/9$ since it corresponds to the roll one and three
 along with the roll three and one. We can recover the original
-\textsl{marginal} distributions $p_X$ and $p_Y$ by summing out the
+\textbf{marginal} distributions $p_X$ and $p_Y$ by summing out the
 variable we aren't interested in; clearly
 \begin{equation}
 p_Y(y=2)=p_{X,Y}(2,2)+p_{X,Y}(3,2)+p_{X,Y}(4,2)+p_{X,Y}(5,2)+p_{X,Y}(6,2)=\frac{2}{9}+\frac{1}{9}=\frac{1}{3}
 \end{equation}
-We can also work out, again with the obvious notation, \textsl{conditional probabilities} $p_{X|Y}(x|y)$ so
+We can also work out, again with the obvious notation, \textbf{conditional probabilities} $p_{X|Y}(x|y)$ so
 \begin{center}
 \begin{tabular}{c|ccccc}
 &2&3&4&5&6\\
@@ -144,7 +144,7 @@ So far we have introduced some new, and slightly confusing, notation
 without anything to show for it. However, there is an advantage; as we
 noted above, numerical values support arithmetic. This allows us to
 define the expectation value. If $g(x)$ is a function we define the
-\textsl{expected value} of $g(X)$ as
+\textbf{expected value} of $g(X)$ as
 \begin{equation}
 \langle g(X)\rangle = \sum_x p(x)g(x)
 \end{equation}
@@ -157,12 +157,12 @@ use angle brackets for expectation values. Another common notation is to use a c
 E[g(X)]=\langle g(X)\rangle
 \end{equation}
 
-The most obvious expected value is the \textsl{expected value} of $X$:
+The most obvious expected value is the \textbf{expected value} of $X$:
 \begin{equation}
 \langle X \rangle =  \sum_x x p(x)
 \end{equation}
 Clearly, if the $p(x)$ represent the frequencies, this is the average
-or \textsl{mean} value taken by $X$; it is often called $\mu$. We are
+or \textbf{mean} value taken by $X$; it is often called $\mu$. We are
 being careful to distinguish the expected value of $X$ and the mean;
 there are occasions when this distinction matters, but generally it
 doesn't. Basically the expected value is defined no matter what the
@@ -174,7 +174,7 @@ distribution on the same data, where the second distribution doesn't
 correspond to frequencies; this is why it can be useful to distinguish
 the mean and the expected value of $X$.
 
-The expect value of $X$ is also referred to as the \textsl{first
+The expect value of $X$ is also referred to as the \textbf{first
   moment}; the \lq{}first\rq{} bit is because it is the expectation
 value for the first power of $X$.
 
@@ -184,7 +184,7 @@ the number of heads when a coin is flipped three times:
 \langle X\rangle =0\times\frac{1}{8}+1\times\frac{3}{8}+2\times\frac{3}{8}+3\times \frac{1}{8}=\frac{3+6+3}{8}=\frac{3}{2}
 \end{equation}
 
-Another common expected value is the \textsl{variance}:
+Another common expected value is the \textbf{variance}:
 \begin{equation}
 V(X)=\langle (X-\mu)^2\rangle
 \end{equation}
@@ -249,10 +249,47 @@ Finally, noting $\mu=\langle X\rangle$ and using the scalar multiplication prope
 \begin{equation}
 V(X)=\langle X^2 \rangle - \mu^2 \rangle
 \end{equation}
-Incidentally $\langle X^2\rangle$ is called the \textsl{second
-  moment}, the variance is called the \textsl{second central moment};
+Incidentally $\langle X^2\rangle$ is called the \textbf{second
+  moment}, the variance is called the \textbf{second central moment};
 the \lq{}central\rq{} indicates that it is the second moment you get
 if you take away the mean first.
+
+\section*{Summary}
+
+\begin{itemize}
+\item A \textbf{random variable} is a map from sample space to a set of numerical values.
+\item The probability that $X=x$, $p(X=x)$, sometimes written $p(x)$,
+  is the sum of the probabilities of all the outcomes with value $x$.
+  \begin{enumerate}
+    \item \begin{equation}
+0\le p(x)\le 1
+\end{equation}
+\item 
+\begin{equation}
+\sum_x{p(x)}=1
+\end{equation}
+\end{enumerate}
+
+\item A \textbf{probability distribution} is a table of probabilities for a random variable.
+
+\item For two random variables $X$ and $Y$, the \textbf{joint distribution} is $p(x,y)$, the probability $X=x$ and $Y=y$; the \textbf{conditional distribution} of $X=x$ given $Y=y$ is $p(x|y)$ and the \textbf{marginal distribution} is
+  \begin{equation}
+    p(x)=\sum_{y}p(x,y)
+  \end{equation}
+
+\item Is $g(x)$ is a function, the \textbf{expected value} is
+  \begin{equation}
+\langle g(X)\rangle = \sum_x p(x)g(x)
+  \end{equation}
+
+\item The \textbf{mean} is $\langle X\rangle$. It is often called $\mu$.
+
+\item The \textbf{variance} is $\langle (X-\mu)^2\rangle$.
+
+\item The \textbf{nth moment} is $\langle X^n\rangle$ and the \textbf{nth central moment} is $\langle (X-\mu)^2\rangle$.
+  
+\end{itemize}
+
 
 \end{document}
 
