--- a/04_random_variables/source/4_random_variables.tex
+++ b/04_random_variables/source/4_random_variables.tex
@@ -286,7 +286,7 @@ if you take away the mean first.
 
 \item The \textbf{variance} is $\langle (X-\mu)^2\rangle$.
 
-\item The \textbf{nth moment} is $\langle X^n\rangle$ and the \textbf{nth central moment} is $\langle (X-\mu)^2\rangle$.
+\item The \textbf{$n$th moment}, often written $\mu_n$, is $\langle X^n\rangle$ and the \textbf{nth central moment} is $\langle (X-\mu)^2\rangle$.
   
 \end{itemize}
 
