--- a/08_continuous_random/source/8_continuous_random.tex
+++ b/08_continuous_random/source/8_continuous_random.tex
@@ -40,11 +40,11 @@ percision, say within a centimetre $P(H\in [5.99,6.01])$ and this is
 does make sense.
 
 There are two approaches to dealing with this; the first is to define
-the \textsl{distribution function} or \textsl{cumulative}
+the \textbf{distribution function} or \textbf{cumulative}
 \begin{equation}
 F(x)=P(X<x)
 \end{equation}
-and we then define the \textsl{density function}
+and we then define the \textbf{density function}
 \begin{equation}
 f(x)=\frac{dF}{dx}
 \end{equation}
@@ -147,7 +147,52 @@ and
 \begin{equation}
 \sigma_Y^2=\langle Y^2\rangle -\mu_Y^2=c^2(\langle X^2\rangle-\mu_X^2)=c^2\sigma_Y^2\end{equation}
 
+\newpage
 
+\section*{Summary}
+
+\begin{itemize}
+
+\item The \textbf{distribution function} or \textbf{cumulative} is
+  \begin{equation}
+F(x)=P(X<x)
+  \end{equation}
+  so $\lim_{x\rightarrow -\infty}F(x)=0$ and $\lim_{x\rightarrow \infty}F(x)=1$.
+  
+
+\item The \textbf{density function} is
+  \begin{equation}
+f(x)=\frac{dF}{dx}
+  \end{equation}
+
+\item By integrating we get
+  \begin{equation}
+    F(x)=\int_{-\infty}^x f(y)dy
+  \end{equation}
+  and so
+  \begin{equation}
+    \int_{-\infty}^\infty f(y)dy=1
+  \end{equation}
+
+\item Hence
+  \begin{equation}
+P(x\in [x_1,x_2])=F(x_2)-F(x_1)
+\end{equation}
+or
+\begin{equation}
+P(x\in [x_1,x_2])=\int_{x_1}^{x_2} f(y)dy
+\end{equation}
+
+\item Expected values work much the same way they did for discrete
+  random variables.
+
+\item If $Y=X+c$ then $\mu_Y=\mu_x+c$ and $\sigma_Y^2=\sigma_X^2$.
+
+  \item If $Y=cX$ then $\mu_Y=c\mu_X$ and $\sigma_Y^2=c^2\sigma_X^2$.
+
+    \end{itemize}
+
+  
 \end{document}
 
 
