--- a/09_Gauss_distribution/source/9_Gauss_distribution.tex
+++ b/09_Gauss_distribution/source/9_Gauss_distribution.tex
@@ -13,6 +13,11 @@
 \usepackage{listings}
 \usepackage{color}
 
+
+\newif\ifind
+\indtrue
+
+
 \lstset{language=C}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -250,36 +255,7 @@ Working out $\mbox{erf}\,(0.5/\sqrt{2})$ using your calculator or computer gives
 \end{equation}
 
 \newpage
-
-\section*{Summary}
-
-\begin{itemize}
-
-\item The \textbf{Gau\ss{}ian distribution} has density
-  \begin{equation}
-p(x)=\frac{1}{\sqrt{2\pi\sigma^2}}e^{-\frac{(x-\mu)^2}{2\sigma^2}}
-  \end{equation}
-
-\item It has moment generating function
-  \begin{equation}
-m(t)= e^{\mu t + \frac{1}{2}\sigma^2 t^2}
-  \end{equation}
-  from which can be be shown that the mean is $\mu$ and the variance is $\sigma^2$ as the notation would suggest.
-
-\item To work out probabilities you need to use the \textbf{error function}
-  \begin{equation}
-\mbox{erf}\,(x)=\frac{1}{\sqrt{\pi}}\int_{-x}^xe^{-y^2}dy=\frac{2}{\sqrt{\pi}}\int_0^xe^{-y^2}dy
-  \end{equation}
-  In fact
-  \begin{equation}
-\mbox{Prob}(x_1<x<x_2)=\frac{1}{2}[\mbox{erf}\,(z_2)-\mbox{erf}\,(z_1)]
-  \end{equation}
-  where
-  \begin{equation}
-z=\frac{x-\mu}{\sqrt{2}\sigma}
-  \end{equation}
-  \end{itemize}
-
+\include{summary}
 \end{document}
 
 
