--- a/02_conditional_probability/source/summary.tex
+++ b/02_conditional_probability/source/summary.tex
@@ -2,7 +2,7 @@
 \ifind
 \section*{Summary}
 \else
-\section*{2 Conditional probability}
+\subsection*{2 Conditional probability}
 \fi
 
 \begin{itemize}
