--- a/07_moment_generating_function/source/summary.tex
+++ b/07_moment_generating_function/source/summary.tex
@@ -2,7 +2,7 @@
 \ifind
 \section*{Summary}
 \else
-\section*{7 The moment generating function}
+\subsection*{7 The moment generating function}
 \fi
 
 
