--- a/10_central_limit_theorem/source/summary.tex
+++ b/10_central_limit_theorem/source/summary.tex
@@ -1,7 +1,7 @@
 \ifind
 \section*{Summary}
 \else
-\section*{10 Central Limit Theorem}
+\subsection*{10 Central Limit Theorem}
 \fi
 
 \begin{itemize}
