--- a/08_continuous_random/source/summary.tex
+++ b/08_continuous_random/source/summary.tex
@@ -2,7 +2,7 @@
 \ifind
 \section*{Summary}
 \else
-\section*{8 continuous random variables}
+\subsection*{8 Continuous random variables}
 \fi
 
 \begin{itemize}
