--- a/sample_paper/source/2019_sample_COMS10011.tex
+++ b/sample_paper/source/2019_sample_COMS10011.tex
@@ -304,7 +304,7 @@ If a six sided dice if rolled four times then the probability of exactly two thr
 \end{equation}
 The chance of at least two threes is the same as the chance of anything except zero threes or one three:
 \begin{equation}
-  p(\ge 2)=1-\left(\frac{5}{6}\right)^4-4\left(\frac{1}{6}\right)\left(\frac{5}{6}\right)
+  p(\ge 2)=1-\left(\frac{5}{6}\right)^4-4\left(\frac{1}{6}\right)\left(\frac{5}{6}\right)^3
 \end{equation}
 The more general case is
 \begin{equation}
