--- a/03_bayes/source/3_bayes.tex
+++ b/03_bayes/source/3_bayes.tex
@@ -61,7 +61,7 @@ $P$&1/8&3/8&3/8&1/8
 \end{center}
 Let $S_3^3$ be the event you are on the third square after three
 rounds, so $P(S_3^3)=1/8$ and, so, if $S_3^2$ is the event you are at
-the third square after three rounds the $P(S_3^2)=3/8$ because it
+the second square after three rounds the $P(S_3^2)=3/8$ because it
 corresponds to three possible sequences (H, H, T), (H, T, H) and (T,
 H, H), out of eight possible sequences in all. Let $S_2^2$ be the
 event that you are at square two after two goes, clearly
